# OpenSmartRouting

./: .gitignore  .lychee.toml  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  NEXT_STEPS.md  README.md  pyproject.toml  vision.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/instructions/: docs.instructions.md  experiments.instructions.md  python.instructions.md  research.instructions.md  review.instructions.md  security.instructions.md
.github/prompts/: create-capability-map.prompt.md  create-epics.prompt.md  create-phases.prompt.md  create-repository-map.prompt.md  create-tickets.prompt.md  create-user-test-scripts.prompt.md  define-project-scope.prompt.md  discover-problem-users-success.prompt.md  discover-project-objective.prompt.md  implement-feature-workflow.prompt.md  pilot-runtime-workflow.prompt.md  plan-routing-experiments.prompt.md  research-free-routing-stack.prompt.md  review-hotspots-workflow.prompt.md  review-pr-workflow.prompt.md  review-security-workflow.prompt.md  run-markdown-pipeline.prompt.md  run-preimplementation-checklist.prompt.md  run-user-test-workflow.prompt.md  setup-project-workflow.prompt.md  triage-pr-comments-workflow.prompt.md
.github/workflows/: codeql.yml  docs-links.yml  pr-checks.yml  release.yml  workflow-evals.yml
ai-evals/: workflow-contracts.json
ai-evals/reports/: workflow-report.md
docs/guide/: ci-pipeline.md  hotspot-review-guide.md  quality-gates.md  security-rules.md
docs/planning/: capability-map.md  epics.md  phases.md  repo-map.md  scope.md  tickets-phase-0.md  tickets-phase-1.md
docs/research/: free-routing-stack.md
harmonic-custom/: AGENTS.md  config.yml  index.md
harmonic-custom/skills/: index.md
harmonic-custom/skills/create-user-test-scripts/: SKILL.md
harmonic-custom/skills/implement-ticket/: SKILL.md
harmonic-custom/skills/pilot-runtime/: SKILL.md
harmonic-custom/skills/planning-bootstrap/: SKILL.md
harmonic-custom/skills/preimplementation-checklist/: SKILL.md
harmonic-custom/skills/research-free-stack/: SKILL.md
harmonic-custom/skills/review-hotspots/: SKILL.md
harmonic-custom/skills/review-pr/: SKILL.md
harmonic-custom/skills/review-security/: SKILL.md
harmonic-custom/skills/routing-experiments/: SKILL.md
harmonic-custom/skills/run-markdown-pipeline/: SKILL.md
harmonic-custom/skills/run-user-test/: SKILL.md
src/opensmartrouting/: __init__.py  cli.py
tests/: __init__.py  test_scaffold.py
tools/: eval_workflows.py
(+2 files in other folders)
