[project]
name = "opensmartrouting"
version = "0.0.1"
description = "Free, Python-first, CLI-first delivery route optimization for Spain."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.scripts]
opensmartrouting = "opensmartrouting.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opensmartrouting"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.15.21",
    "yamllint>=1.35",
    "pre-commit>=3.8",
    "mypy>=1.11",
    "pip-audit>=2.7",
    "vulture>=2.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/opensmartrouting"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
files = ["src"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

